Fix: burger menu z-index ordering

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -64,7 +64,7 @@
 .logo {
   text-decoration: none;
   position: relative;
-  z-index: 9999999;
+  z-index: 999999;
   font-size: 2rem;
   font-weight: 900;
   color: rgb(0, 0, 0);
